# portfolio

./: .gitignore  DOCUMENTATION.md  app.py  package.json  profile_config.json  pyproject.toml  requirements.txt
app/projects/irrigation/: config.json
app/projects/pest_classification/: config.json
app/projects/smart_agric_system/: class_mapping.json  config.json  predict.py
projects/customer_churn/: churn_model.pkl  config.json  predict.py
projects/irrigation/: config.json  predict.py
projects/pest_classification/: predict.py
projects/smart_agric_system/: predict.py
scripts/: setup.py
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  base.html  index.html  project_detail.html  projects.html
