[project]
name = "ml-ai-portfolio"
version = "1.0.0"
description = "Dynamic Flask-based portfolio for ML/AI Engineers"
readme = "DOCUMENTATION.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "werkzeug>=3.0.0",
    "gunicorn>=21.0.0",
]

[dependency-groups]
dev = []
